deployment/04-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: bankapplication
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: backend
